# Drishti

./: .env.example  .gitignore  CLAUDE.md  README.md  highleveldesign.html  lowleveldesign.html  prd.html  pyproject.toml  render.yaml  requirements.txt  specs.html
design/: discussion-2026-07-04-vision-notes.md  prd-2026-07-04-current-state.md  prd-2026-07-04-personal-research-platform.md  specs.html
docs/: audit-2026-06-15-data-version.md  audit-2026-06-15-fix-plan.md  audit-2026-07-04-dashboard.md  audit-remediation-plan.md  design-choices.md  lessons.md  methodology.html  status-2026-07-07-handoff.md
drishti/: .env.example  CLAUDE.md  README.md  requirements.txt
notebooks/: 01_data_pull.ipynb  01_data_pull.md  02_factor_ic_research.ipynb  02_factor_ic_research.md  03_granger_causality.ipynb  03_granger_causality.md  04_hmm_regime_detection.ipynb  04_hmm_regime_detection.md  05_walk_forward_backtest.ipynb  05_walk_forward_backtest.md  06_dcc_garch_spillover.ipynb  06_dcc_garch_spillover.md  07_var_backtesting.ipynb  07_var_backtesting.md  08_growth_trends.ipynb  08_growth_trends.md  09_risk_tables.ipynb  09_risk_tables.md  10_covariance.ipynb  10_covariance.md  11_mpt_frontier.ipynb  11_mpt_frontier.md  12_regime_scatter.ipynb  12_regime_scatter.md  13_advanced_techniques.ipynb  13_advanced_techniques.md  14_spillover.ipynb  14_spillover.md  15_credit_liquidity.ipynb  15_credit_liquidity.md  README.ipynb  README.md
risk_mcp/: server.py  tools.py
scripts/: build_events_study.py  build_regime_study.py  build_spillover_study.py  build_yahoo_map_v2.py  (+11 more)
(+177 files in other folders)
