[project]
name = "drishti"
version = "0.1.0"
description = "Drishti — local-first quant risk research platform for Indian equity portfolios (IIM Calcutta FRM course project)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arch==6.3.0",
    "fastapi==0.111.0",
    "feedparser==6.0.11",
    "fredapi==0.5.2",
    "hmmlearn==0.3.2",
    "httpx==0.27.0",
    "imbalanced-learn>=0.12.0",
    "jinja2==3.1.4",
    "kiteconnect==5.0.1",
    "mcp>=0.9.1",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "pyarrow==16.0.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "requests==2.31.0",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "statsmodels==0.14.2",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "uvicorn[standard]==0.29.0",
    "xgboost>=2.0.0",
    "yfinance==0.2.40",
]
